# OmniOrchestrator

./: .docker_env.example  .env.example  .gitignore  Architecture.drawio  Cargo.toml  Dockerfile  README.md  build-linux.sh  build.rs  cluster.db  cluster.db-shm  cluster.db-wal  compose.yaml  config.json  dev-setup.sh  output.glue  start.bat  start.sh
.github/workflows/: Rust-Build-Test.yml  release.yml  wiki.yml
deployment-templates/: Dockerfile  example.devcontainer.json
sql/: db_init.sql  sample_data.sql
sql/v1/: clickhouse.sql  clickhouse_up.sql  omni_sample_data.sql  omni_up.sql  platform_sample_data.sql  platform_up.sql  sample_data.sql  up_omni.sql
sql/versions/V1/queries/api_keys/: api_key_create.sql  api_key_edit.sql  api_key_remove.sql
sql/versions/V1/queries/app/: app_create.sql  app_edit.sql  app_remove.sql
sql/versions/V1/queries/config/: config_var_create.sql  config_var_edit.sql  config_var_remove.sql
sql/versions/V1/queries/deployment/: deployment_create.sql  deployment_remove.sql
sql/versions/V1/queries/domain/: domain_create.sql  domain_edit.sql  domain_remove.sql
sql/versions/V1/queries/instance/: instance_create.sql  instance_remove.sql
sql/versions/V1/queries/org/: org_create.sql  org_edit.sql  org_remove.sql
sql/versions/V1/queries/permission/: permission_create.sql  permission_edit.sql  permission_remove.sql
sql/versions/V1/queries/role/: role_create.sql  role_edit.sql  role_remove.sql
sql/versions/V1/queries/user/: user_check_login.sql  user_create.sql  user_remove.sql  user_update.sql
src/: api_models.rs  cluster.rs  cors.rs  endpoints.rs  leader.rs  logger.rs  logging.rs  main.rs  server.rs  state.rs
src/api/: PlannedRoutes.md  README.md  auth.rs  index.rs  mod.rs  web.rs
src/api/helpers/: release.rs
src/api/v1/: alerts.rs  apps.rs  audit_log.rs  builds.rs  cost.rs  deploy.rs  deployments.rs  instances.rs  metadata.rs  metrics.rs  mod.rs  notifications.rs  permissions.rs  platforms.rs  providers.rs  regions.rs  storage.rs  users.rs  workers.rs
src/api/v1/cli/: backup.rs  mod.rs
src/api/v1/helpers/: release.rs
src/api/v1/platforms_new/subroutes/: backups.rs  mod.rs  network.rs  utils.rs
src/api/v2/: mod.rs
src/app_autoscaler/: README.md  agent.rs  app.rs  app_autoscaler.rs  error.rs  metrics.rs  mod.rs  node_types.rs  output.glue
src/autoscalar/: README.md  mod.rs  types.rs
src/backup/: export.rs  iso.rs  mod.rs  model.rs  recovery.rs  validation.rs
src/backup/coordinator/: app_definitions.rs  coordinator.rs  director.rs  manifest.rs  mod.rs  network.rs  orchestrator.rs  system_core.rs  types.rs  volume_data.rs
src/config/: README.md  mod.rs
src/db/: README.md  data_types.rs  mod.rs  queries.rs  queries_new.rs  tables.rs  utils.rs
src/db/queries/: app.rs  audit_log.rs  deployment.rs  instance.rs  mod.rs  org.rs  permission.rs  region.rs  user.rs
src/db/v1/: mod.rs  tables.rs
src/db/v1/queries/: alert.rs  app.rs  audit_log.rs  backup.rs  build.rs  cost.rs  deployment.rs  instance.rs  metadata.rs  metrics.rs  mod.rs  notification.rs  org.rs  permission.rs  provider.rs  region.rs  storage.rs  user.rs  worker.rs
src/db_manager/: connection.rs  error.rs  manager.rs  migration.rs  mod.rs
src/initialization/: create_auth_config.rs  launch_server.rs  mod.rs  setup_clickhouse.rs  setup_cluster_management.rs  setup_database.rs  setup_logging.rs  setup_schema.rs  start_leader_election.rs  start_peer_discovery.rs
src/network/: client.rs  discovery.rs  mod.rs
src/schemas/: auth.rs  mod.rs
src/schemas/v1/api/: PlannedRoutes.md  alerts.rs  apps.rs  audit_log.rs  builds.rs  cost.rs  deployments.rs  index.rs  instances.rs  metadata.rs  metrics.rs  mod.rs  notifications.rs  permissions.rs  platforms.rs  providers.rs  regions.rs  storage.rs  users.rs  workers.rs
src/schemas/v1/api/alerts/: actions.rs  app_alerts.rs  auto_resolve.rs  bulk.rs  create.rs  escalation.rs  (+7 more)
src/schemas/v1/db/: mod.rs  tables.rs  utils.rs
src/schemas/v1/models/: alert.rs  app.rs  audit_log.rs  backup.rs  build.rs  cost.rs  deployment.rs  instance.rs  metrics.rs  mod.rs  notification.rs  org.rs  platform.rs  provider.rs  region.rs  role.rs  storage.rs  user.rs  util_tables.rs  worker.rs
src/schemas/v2/: mod.rs
src/types/: volume.rs
src/worker_autoscaler/: README.md  director.rs  error.rs  metrics.rs  mod.rs  node_types.rs  policy.rs  vm.rs  worker_autoscaler.rs
tests/: auth_tests.bat
(+80 files in other folders)
