[package]
name = "omni-orchestrator"
version = "0.1.4"
edition = "2021"


[dependencies]
rocket = { version = "0.5.1", features = ["json", "uuid"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json5 = "0.2.1"
serde_json = "1.0.142"
async-trait = "0.1.89"
reqwest = { version = "0.12.23", features = ["json", "native-tls-vendored", "rustls-tls"] }
log = "0.4.27"
env_logger = "0.11.8"
thiserror = "2.0.14"
parking_lot = "0.12.4"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
colored = "3.0.0"   
anyhow = "1.0.99"
lazy_static = "1.5.0"
rocket-multipart-form-data = "0.10.7"

# Database
mysql = "26.0.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
clickhouse = { version = "0.13.3"}
libomni = { git = "https://github.com/OmniCloudOrg/LibOmni" }
lighthouse = { git = "https://github.com/OmniCloudOrg/Lighthouse", features = ["metrics-persistence", "predictive-scaling"], rev = "de72b5365bdc1a28e89ffbf06b3c92957ad3403d"}

# Crypto & Security
sha2 = "0.10.9"
rand = "0.9.2"
hex = "0.4.3"
once_cell = "1.21.3"
dotenv = { version = "0.15.0" }
tracing = { version = "0.1.41", features = ["log"] }
hadris-iso = "0.0.2"
ssh2 = { version = "0.9.5" }
paxakos = "0.13.0"
jsonwebtoken = "9.3.1"
rust_decimal = "1.37.2"

[profile.dev]
codegen-units = 32
incremental = true
debug-assertions = false
overflow-checks = false
opt-level = 0
lto = "thin"
